--- a/src/assets/stylesheets/layout.scss
+++ b/src/assets/stylesheets/layout.scss
@@ -1,4 +1,5 @@
-$gradient: linear-gradient(210deg,#943cff 0%,#dd45d3 40.13%,#fc9a57 90%);
+//$gradient: linear-gradient(210deg,#943cff 0%,#dd45d3 40.13%,#fc9a57 90%);
+$gradient: linear-gradient(210deg, rgba(53,186,26,1) 0%, rgba(86,150,198,1) 50%, rgba(0,123,255,1) 100%);
 
 // Bootstrap Custom Variables here
 
@@ -79,4 +80,9 @@ p {
 .bg-primary-faded {
   color: $primary;
   background-color: rgba(red($primary), green($primary), blue($primary), 0.2);
+}
+
+.header-text-top-nav {
+  color: #007BFF;
+  font-weight: 500;
 }
